# tracklab

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  Available_features.html  CITATION.cff  LICENSE  README.md  configuration.html  datasets.py  dekr2detections.py  detections.py  genindex.html  index.html  installation.html  logging.html  main.py  objects.inv  ocr_tests.md  posetrack.py  py-modindex.html  pyproject.toml  requirements.txt  requirements_docs.txt  search.html  searchindex.js  strong_sort2detections.py  torchreid2detections.py  track.py  tracker.py  tutorial.md  val.py  val.yaml  vis.yaml  vis_engine.py
.github/workflows/: deploy_documentation.yaml  publish.yaml
DEKR/: README.md  requirements.txt
DEKR/experiments/: inference.yaml
PoseTrack21/: .gitignore  LICENSE  README.md  download_dataset.py
PoseTrack21/baselines/: README.md
PoseTrack21/doc/: dataset_structure.md  how_to_download.md
PoseTrack21/eval/: README.md
Yolov5_StrongSORT_OSNet/: README.md
_modules/: index.html
_modules/tracklab/: main.html  utils.html
_sources/: Available_features.md.txt  configuration.rst.txt  installation.rst.txt  logging.rst.txt
_sources/additional/: citation.rst.txt  coming_soon.rst.txt  licence.rst.txt
_sources/api/: pbtrack.core.rst.txt  pbtrack.pipeline.rst.txt  pbtrack.rst.txt  pbtrack.wrappers.detect_single.rst.txt  pbtrack.wrappers.eval.mot.rst.txt  pbtrack.wrappers.eval.posetrack.rst.txt  pbtrack.wrappers.eval.rst.txt  pbtrack.wrappers.eval.soccernet.rst.txt  pbtrack.wrappers.reid.rst.txt  tracklab.configs.rst.txt  tracklab.engine.rst.txt  tracklab.utils.rst.txt  tracklab.wrappers.bbox_detector.rst.txt  tracklab.wrappers.dataset.posetrack.rst.txt  tracklab.wrappers.dataset.soccernet.rst.txt  tracklab.wrappers.tracklet_agg.rst.txt
_sources/tutorials/: MOT_dataset.md.txt  MOT_eval.rst.txt  Yolov8_pose_estimation.rst.txt
additional/: citation.html  coming_soon.html  contribute.html  licence.html
api/: modules.html  pbtrack.callbacks.html  pbtrack.core.html  pbtrack.datastruct.html  pbtrack.engine.html  pbtrack.html  pbtrack.loggers.html  pbtrack.pipeline.html  pbtrack.utils.html  pbtrack.wrappers.datasets.html  pbtrack.wrappers.datasets.mot.html  pbtrack.wrappers.datasets.posetrack.html  pbtrack.wrappers.datasets.soccernet.html  pbtrack.wrappers.detect_multiple.html  pbtrack.wrappers.detect_single.html  pbtrack.wrappers.eval.html  pbtrack.wrappers.eval.mot.html  pbtrack.wrappers.eval.posetrack.html  pbtrack.wrappers.eval.soccernet.html  pbtrack.wrappers.html  pbtrack.wrappers.jn_detector.html  pbtrack.wrappers.reid.html  pbtrack.wrappers.track.html  tracklab.callbacks.html  tracklab.configs.html  tracklab.datastruct.html  tracklab.engine.html  tracklab.html  tracklab.pipeline.html  tracklab.utils.html  tracklab.visualization.html  tracklab.wrappers.bbox_detector.html  tracklab.wrappers.dataset.html  tracklab.wrappers.dataset.mot_like.html  tracklab.wrappers.dataset.posetrack.html  tracklab.wrappers.dataset.soccernet.html  tracklab.wrappers.eval.html  tracklab.wrappers.eval.posetrack.html  tracklab.wrappers.eval.soccernet.html  tracklab.wrappers.html  (+4 more)
configs/: config.yaml  dekr.yaml
configs/bpbreid/: bpbreid_hrnet32_market1501_test.yaml  bpbreid_hrnet32_market1501_train.yaml  local_bpbreid_hrnet32_market1501_test.yaml  local_bpbreid_hrnet32_market1501_train.yaml  local_bpbreid_synergy_train.yaml  local_bpbreid_test.yaml  local_bpbreid_test_market.yaml  local_bpbreid_train.yaml  remote_bpbreid_hrnet32_market1501_test.yaml  remote_bpbreid_hrnet32_market1501_train.yaml  remote_bpbreid_test.yaml  remote_bpbreid_train.yaml
configs/dataset/: default.yaml  external_video.yaml  image_folder.yaml  mot20.yaml  posetrack21.yaml  soccernet2023.yaml
configs/detect/: openpifpaf.yaml
configs/detect_multiple/: cascade_rcnn.yaml  dekr_coco.yaml  dekr_crowdpose.yaml  faster_rcnn.yaml  yolov8.yaml  (+4 more)
docs/: Available_features.md  MOT_integration.md  conf.py  configuration.rst  index.rst  installation.rst  logging.rst
lib/: dataset.py  dekr2detections.py  detections.py  strong_sort2detections.py  torchreid2detections.py
pbtrack/: __init__.py  dekr2detections.py  detections.py  main.py  torchreid2detections.py  tracker.py  vis_engine.py
plugins/track/: pyproject.toml
plugins/track/bot_sort/: bot_sort.py  matching.py
plugins/track/bpbreid_strong_sort/: credits.md  ecc.py  strong_sort.py
plugins/track/bpbreid_strong_sort/sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  nn_matching.py  track.py  tracker.py
plugins/track/byte_track/: byte_tracker.py  credits.md  matching.py
plugins/track/dd_sort/: __init__.py  dd_sort.py  dd_sort_bytetrack.py
plugins/track/dd_sort/simformer/: __init__.py  assignement_strats.py  dataset.py  merge_token_strats.py  sampler.py  simformer.py  simformer_st.py  similarity_metrics.py  utils.py
plugins/track/dd_sort/simformer/callbacks/: __init__.py  metrics.py  statistics.py  visualization.py
plugins/track/dd_sort/simformer/kalman_filter/: __init__.py  ocsort_kalman_box_predictor.py  ocsort_kalman_filter.py
plugins/track/dd_sort/simformer/modules/: __init__.py  app_tokenizers.py  classifiers.py  st_tokenizers.py  tracklet_encoder.py  transformers.py
plugins/track/dd_sort/simformer/motionbert/: DSTformer.py  posetrack2h36m.py
plugins/track/dd_sort/simformer/transforms/: __init__.py  appearance.py  batch.py  dataset.py  detection.py  shift.py  tracklet.py  transform.py
plugins/track/deep_oc_sort/: association.py  ocsort.py  reid_multibackend.py
plugins/track/heuristic_sort/: __init__.py  heuristic_sort.py
plugins/track/oc_sort/: ocsort.py
plugins/track/strong_sort/: __init__.py  reid_multibackend.py  strong_sort.py
plugins/track/strong_sort/sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  nn_matching.py  oks_matching.py  track.py  tracker.py
plugins/track/strong_sort/utils/: ecc.py
reid/: setup.py
strong_sort/: reid_multibackend.py  strong_sort.py
tracklab/: main.py
tutorials/: MOT_dataset.html  MOT_eval.html  Yolov8_pose_estimation.html
(+747 files in other folders)
