[project]
name = "tracklab"
version = "1.3.21"
description = "A Modular End-to-End Tracking Framework for Research and Development"
readme = "README.md"
authors = [
    { name = "Victor Joos", email = "victorjoosdtb@gmail.com" },
    { name = "Baptiste Standaert", email = "baptiste.standaert@uclouvain.be"},
    { name = "Vladimir Somers", email = "vladimir.somers@uclouvain.be"},
]

requires-python = ">=3.9"
dependencies = [
    "hydra-core",
    "lightning",
    "pytorch_lightning",
    "numpy",
    "ultralytics",
    "filterpy",
    "torch",
    "torchvision",
    "soccernet",
    "yt-dlp",
    "gdown",
    "pandas",
    "matplotlib",
    "rich",
    "tabulate",
    "sn-trackeval",
    "lap",
    "distinctipy",
    "rtmlib",
    "transformers",
    "accelerate",
    "huggingface-hub",
    "opencv-python",
    "tqdm",
    "omegaconf",
    "requests",
    "wandb",
    "scipy",
    "yacs",
    "scikit-image",
]

[dependency-groups]
dev = [
    "tracklab",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.scripts]
tracklab = "tracklab.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "plugins/track"]
include = ["tracklab*", "bot_sort*", "bpbreid_strong_sort*", "byte_track*",
    "deep_oc_sort*", "oc_sort*", "strong_sort*", "hydra_plugins.*"]
exclude = []

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.yaml"]

[tool.uv]
no-build-isolation-package = ["chumpy"]
